New about subpage for grants

--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -89,6 +89,7 @@
         
         <message key="about.governance">Governance of Health Research</message>   
         <message key="about.committees">Ethics</message>   
+        <message key="about.grants">Grants</message>   
         <message key="about.files">Files</message>   
         <message key="about.contactlinks">Contacts &amp; Links</message>   
         <message key="about.contacts">Contacts</message>   
