--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -81,11 +81,16 @@
         <message key="manager.extraFields.geoAreas.replacement.message">It appears that the geographical area you would like to delete is currently in used by one or multiple proposal(s) / institution(s) / review committee(s). If you want to delete this area, you therefore need to select a replacement area for the concerned proposal(s) / institution(s) / committee(s).</message>        
         <message key="manager.extraFields.geoAreas.replacement.required">Please choose a replacement for this geographical area. The area you intend to delete is used by one or multiple research proposal(s) / institution(s) / committee(s) in the database. You therefore need to choose a replacing area for these proposal(s) / institution(s) / committee(s). Please choose carefully: this operation can not be undone.</message>
         <message key="manager.extraFields.modify.warning">Attention! This entry is in used by some research proposal(s). The modification will therefore affect all of the proposal(s) referring to it.</message>
+        <message key="manager.extraFields.others.def">(manually entered by the submitters)</message>
+        <message key="manager.extraFields.others">Manage "Other" fields</message>
+        <message key="manager.extraFields.others.warning">Attention! The modification will affect all of the concerned proposal(s). This operation can not be undone. It is strongly recommended to operate daily backup of the database. Please contact your server administrator for more information.</message>
         <message key="manager.extraFields.proposalTypes">Proposal Types</message>
         <message key="manager.extraFields.proposalTypes.new">Create a new proposal type</message>
         <message key="manager.extraFields.proposalTypes.edit">Create / Edit a new proposal type</message>
         <message key="manager.extraFields.proposalTypes.delete">Delete proposal type</message>
+        <message key="manager.extraFields.proposalTypes.manageOthers">Below is a list of all proposal types that submitters of research proposals manually entered. Select the one(s) you would like to modify by clicking on the concerned checkboxe(s) and select under the proposal type you would like to replace them with.</message>
         <message key="manager.extraFields.proposalTypes.missing.name">Please enter the name of the proposal type.</message>
+        <message key="manager.extraFields.replacement">Replacement</message>
         <message key="manager.extraFields.replacement.warning">Attention! The deletion of an entry and its replacement can not be undone. Please be sure you want to delete this particular entry and, if applicable, you selected the right replacement. It is strongly recommended to operate daily backup of the database. Please contact your server administrator for more information.</message>
         <message key="manager.extraFields.replacement.message">It appears that the entry you would like to delete is currently in used by one or multiple research proposal(s). If you want to delete this entry, you therefore need to select a replacement for the concerned proposal(s).</message>
         <message key="manager.extraFields.replacement.proposalsNumber">Number of research proposal(s) using this entry:</message>
@@ -101,6 +106,7 @@
         <message key="manager.extraFields.researchFields.new">Create a new research field</message>
         <message key="manager.extraFields.researchFields.edit">Create / Edit a new research field</message>
         <message key="manager.extraFields.researchFields.delete">Delete research field</message>
+        <message key="manager.extraFields.researchFields.manageOthers">Below is a list of all research fields that submitters of research proposals manually entered. Select the one(s) you would like to change by clicking on the concerned checkboxe(s) and and select under the research field you would like to replace them with.</message>
         <message key="manager.extraFields.researchFields.missing.name">Please enter the name of the research field.</message>
 
 
