--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -13,7 +13,11 @@
 <locale name="en_US" full_name = "English">
     
 	<!-- Added February - July 2014 -->
-        <message key="manager.approvalNotice">Approval Notice</message>
+        <message key="manager.approvalNotice">Approval Notice Template</message>
+        <message key="manager.approvalNotices">Approval Notice Templates</message>
+        <message key="manager.approvalNotice.active">Active</message>
+        <message key="manager.approvalNotice.active.instruct">Please note that if this approval notice is not active, the committees won't be able to download it.</message>
+        <message key="manager.approvalNotice.active.required">Please specify if the template should be active.</message>        
         <message key="manager.approvalNotice.body">Body</message>
         <message key="manager.approvalNotice.body.description">The information entered in the text below will be the body of the approval notice. It is in this section you should provide all the relevant information about your approval notice.</message>
         <message key="manager.approvalNotice.committee.add">Add another committee</message>
@@ -21,21 +25,103 @@
         <message key="manager.approvalNotice.committees.short">Committee(s)</message>        
         <message key="manager.approvalNotice.delete">Are you you want to delete this approval notice? This action can not be undone.</message>
         <message key="manager.approvalNotice.description">These web pages will allow you to create approval notice templates for the committees to use.</message>
-        <message key="manager.approvalNotice.docType.pdf">Portable Document Format (PDF)</message>
-        <message key="manager.approvalNotice.docType.txt">Editable text document</message>
         <message key="manager.approvalNotice.footer">Footer</message>
         <message key="manager.approvalNotice.footer.description">The information entered in the text below will be the footer of all the pages. It is a good place for the page number, the decision, or the address of the person to contact.</message>
         <message key="manager.approvalNotice.header">Header</message>
-        <message key="manager.approvalNotice.header.description">The information entered in the text below will be the header of all the pages. It is a good place for the logo of the committee or the name of this particular approval notice form..</message>
+        <message key="manager.approvalNotice.header.description">The information entered in the text below will be the header of all the pages. It is a good place for the logo of the committee or the name of this particular approval notice form.</message>
+        <message key="manager.approvalNotice.instruct">You are going to create or edit a template of approval notices. Once active and completed, the selected committee(s), during the selected round(s) of review of a specific research proposal, will be able to download this approval notice in a word document and completed with the information from the research proposal.</message>
+        <message key="manager.approvalNotice.key">Key</message>
+        <message key="manager.approvalNotice.key.class.people">People</message>
+        <message key="manager.approvalNotice.key.class.people.investigators">Investigators</message>  
+        <message key="manager.approvalNotice.key.class.people.primInvestigator">Primary Investigator</message>  
+        <message key="manager.approvalNotice.key.class.people.coInvestigators">Co-Investigators</message>  
+        <message key="manager.approvalNotice.key.class.committee">Committee</message>
+        <message key="manager.approvalNotice.key.class.dates">Dates</message>  
+        <message key="manager.approvalNotice.key.class.abstract">Abstract</message>  
+        <message key="manager.approvalNotice.key.class.details">Details</message> 
+        <message key="manager.approvalNotice.key.class.details.student">Student</message> 
+        <message key="manager.approvalNotice.key.proposalId.name">Proposal ID</message>  
+        <message key="manager.approvalNotice.key.proposalId.explanation">The ID # of the research proposal.</message>   
+        <message key="manager.approvalNotice.key.comName.name">Committee name</message>  
+        <message key="manager.approvalNotice.key.comName.explanation">The full name of the committee reviewing the proposal.</message> 
+        <message key="manager.approvalNotice.key.comSecName.name">Secretary name</message>  
+        <message key="manager.approvalNotice.key.comSecName.explanation">The full name and title of the secretary downloading the template.</message> 
+        <message key="manager.approvalNotice.key.comChairName.name">Chair name</message>  
+        <message key="manager.approvalNotice.key.comChairName.explanation">If a user enrolled as a chair in the concerned committee, his/her full name and title.</message> 
+        <message key="manager.approvalNotice.key.comViceChairName.name">Vice-Chair name</message>  
+        <message key="manager.approvalNotice.key.comViceChairName.explanation">If a user enrolled as a vice-chair in the concerned committee, his/her full name and title</message> 
+        <message key="manager.approvalNotice.key.comAcronym.name">Committee Acronym</message>  
+        <message key="manager.approvalNotice.key.comAcronym.explanation">The acronym of the committee reviewing the proposal.</message>   
+        <message key="manager.approvalNotice.key.todayDate.name">Today's date</message>  
+        <message key="manager.approvalNotice.key.todayDate.explanation">Today's date.</message>   
+        <message key="manager.approvalNotice.key.subRoundDate.name">Submission date</message>  
+        <message key="manager.approvalNotice.key.subRoundDate.explanation">Date of submission for this round of review.</message>   
+        <message key="manager.approvalNotice.key.reviewType.name">Review type</message>  
+        <message key="manager.approvalNotice.key.reviewType.explanation">Type of review (initial review, adverse events, protocol amendment...).</message>   
+        <message key="manager.approvalNotice.key.reviewRound.name">Review round</message>  
+        <message key="manager.approvalNotice.key.reviewRound.explanation">Round for this type of review.</message>   
+        <message key="manager.approvalNotice.key.invNAA1Line.name">Investigators and affiliations 1 line</message>  
+        <message key="manager.approvalNotice.key.invNAA1Line.explanation">The names of the investigators and their affiliations in parentheses, beginning with the primary investigator of the research. It will be displayed in one line.</message>   
+        <message key="manager.approvalNotice.key.invNAAMLines.name">Investigators and affiliations multi lines</message>  
+        <message key="manager.approvalNotice.key.invNAAMLines.explanation">The names of the investigators and their affiliations, beginning with the primary investigator of the research. It will be displayed in multple lines (one line per investigator).</message>   
+        <message key="manager.approvalNotice.key.primInvName.name">Primary investigator's name</message>  
+        <message key="manager.approvalNotice.key.primInvName.explanation">The full name of the primary investigator.</message>   
+        <message key="manager.approvalNotice.key.primInvAff.name">Primary investigator's affiliation</message>  
+        <message key="manager.approvalNotice.key.primInvAff.explanation">The affiliation of the primary investigator.</message>   
+        <message key="manager.approvalNotice.key.coInvNAA1Line.name">Co-investigators and affiliations 1 line</message>  
+        <message key="manager.approvalNotice.key.coInvNAA1Line.explanation">The names of only the co-investigators and their affiliations in parentheses. It will be displayed in one line. If no co-investigators in the research, this will return a blank line.</message>   
+        <message key="manager.approvalNotice.key.coInvNAAMLines.name">Co-investigators and affiliations multi lines</message>  
+        <message key="manager.approvalNotice.key.coInvNAAMLines.explanation">The names only the co-investigators and their affiliations. It will be displayed in multple lines (one line per co-investigator). If no co-investigators in the research, this will return a blank line.</message>   
+        <message key="manager.approvalNotice.key.scienTitle.name">Scientific title</message>  
+        <message key="manager.approvalNotice.key.scienTitle.explanation">The scientific title of the research.</message>   
+        <message key="manager.approvalNotice.key.publicTitle.name">Public title</message>  
+        <message key="manager.approvalNotice.key.publicTitle.explanation">The public title of the research</message>   
+        <message key="manager.approvalNotice.key.abstractFull.name">Abstract</message>  
+        <message key="manager.approvalNotice.key.abstractFull.explanation">The full abstract of the research proposal (background, objectives, study methods and expected outcomes).</message>   
+        <message key="manager.approvalNotice.key.background.name">Background</message>  
+        <message key="manager.approvalNotice.key.background.explanation">The "Background" section of the abstract.</message>   
+        <message key="manager.approvalNotice.key.objectives.name">Objectives</message>  
+        <message key="manager.approvalNotice.key.objectives.explanation">The "Objectives" section of the abstract.</message>   
+        <message key="manager.approvalNotice.key.studyMethods.name">Study Methods</message>  
+        <message key="manager.approvalNotice.key.studyMethods.explanation">The "Study Methods" section of the abstract.</message>   
+        <message key="manager.approvalNotice.key.expectedOutcomes.name">Expected Outcomes</message>  
+        <message key="manager.approvalNotice.key.expectedOutcomes.explanation">The "Expected Outcomes" section of the abstract.</message>   
+        <message key="manager.approvalNotice.key.studentInstitution.name">Student Institution</message>  
+        <message key="manager.approvalNotice.key.studentInstitution.explanation">If the concerned research proposal is a student research, this will print the institution of the student. If not, this will print a blank line.</message>   
+        <message key="manager.approvalNotice.key.studentDegree.name">Student Degree</message> 
+        <message key="manager.approvalNotice.key.studentDegree.explanation">If the concerned research proposal is a student research, this will print the degree the student of the research is enrolled. If not, this will print a blank line.</message>   
+        <message key="manager.approvalNotice.key.studentSupName.name">Student Supervisor</message>  
+        <message key="manager.approvalNotice.key.studentSupName.explanation">If the concerned research proposal is a student research, this will print the name of the supervisor the student of the research is enrolled. If not, this will print a blank line.</message>   
+        <message key="manager.approvalNotice.key.resStartDate.name">Research Start Date</message>  
+        <message key="manager.approvalNotice.key.resStartDate.explanation">The start date of the research.</message>   
+        <message key="manager.approvalNotice.key.resEndDate.name">Research End Date</message>  
+        <message key="manager.approvalNotice.key.resEndDate.explanation">The end date of the research.</message>   
+        <message key="manager.approvalNotice.key.KII.name">Key Implementing Institution</message>  
+        <message key="manager.approvalNotice.key.KII.explanation">The key implementing institution of the research proposal.</message>   
+        <message key="manager.approvalNotice.key.countries.name">Countries</message>  
+        <message key="manager.approvalNotice.key.countries.explanation">If the concerned research proposal involved multiple countries, it will print these countries. If not, it will print a blank line.</message>   
+        <message key="manager.approvalNotice.key.geoAreas.name">Geographical Areas</message>  
+        <message key="manager.approvalNotice.key.geoAreas.explanation">The geographical area(s) where the research takes place.</message>   
+        <message key="manager.approvalNotice.key.resDomains.name">Research Domain</message>  
+        <message key="manager.approvalNotice.key.resDomains.explanation">The research domain(s) of the research proposal.</message>   
+        <message key="manager.approvalNotice.key.resFields.name">Research Fields</message>  
+        <message key="manager.approvalNotice.key.resFields.explanation">The research field(s) of the research proposal.</message>   
+        <message key="manager.approvalNotice.key.propType.name">Proposal Types</message>  
+        <message key="manager.approvalNotice.key.propType.explanation">The proposal type(s) of the research proposal.</message>   
+        <message key="manager.approvalNotice.key.dataCollType.name">Data Collection</message>  
+        <message key="manager.approvalNotice.key.dataCollType.explanation">The type of the data collection.</message>           
+        <message key="manager.approvalNotice.information">Information</message>        
         <message key="manager.approvalNotice.new">Create Approval Notice</message>
+        <message key="manager.approvalNotice.preview">To preview this approval notice template using a sample research proposal, please save it and click on the "Preview" link in the Approval Notice Templates page.</message>
         <message key="manager.approvalNotice.reviewTypes.add">Add another review Type</message>
         <message key="manager.approvalNotice.reviewTypes.long">Concerned Review Type(s)</message>
         <message key="manager.approvalNotice.reviewTypes.short">Review Type(s)</message>
         <message key="manager.approvalNotice.s">Approval Notice(s)</message>
+        <message key="manager.approvalNotice.template">Template</message>
+        <message key="manager.approvalNotice.template.instruct1"><![CDATA[You might want to include data from the concerned research proposal into your template. For example, you want to begin the body with:<br/><center><i>Dear John Doe,</i></center><br/>And you want "John Doe" to be automatically replaced by the full name of the first investigator of the research. In that case you should therefore write:<br/><br/><center><i>Dear {$primInvName},</i></center><br/>The system will understand the key "{$primInvName}" and will replace it by the full name of the primary investigator.<br/><br/>Please use the links below to access all the available "keys".]]></message>
+        <message key="manager.approvalNotice.template.instruct2">Consideration for multiple languages: If your HRP is using multiple languages, please inform the concerned committees that they should select the desired language in the right column of the HRP in order to obtain the variables part of the research proposal in that language. You would however need to create an approval notice template for each language you intend to use.</message>
         <message key="manager.approvalNotice.title.required">The title of the approval notice is required.</message>
-        <message key="manager.approvalNotice.type">Document type</message>
-        <message key="manager.approvalNotice.type.required">The type of the document is required.</message>
-        <message key="manager.approvalNotices">Approval Notices</message>
+        <message key="manager.approvalNotice.variablesList">List of variables</message>
         
         <message key="manager.institutions">Institutions</message>
         <message key="manager.institutions.create">Create a new institution</message>
